# modern-ocaml

./: .gitignore  .ocamlformat  README.md  dune-project  modern-ocaml.opam  package.json
.github/: dependabot.yml
.github/workflows/: build-test.yml  deploy-doc.yml  lint.yml  opam-dependency-submission.yml
esy.lock/: index.json
lib/: dune
test/: dune
