opam-version: "2.0"
maintainer: "Louis Roché <louis@louisroche.net>"
authors: "Louis Roché <louis@louisroche.net>"
homepage: "https://github.com/Khady/modern-ocaml"
bug-reports: "https://github.com/Khady/modern-ocaml/issues"
license: "AGPL-3.0-or-later"
dev-repo: "git+https://github.com/Khady/modern-ocaml.git"
doc: "https://khady.github.io/modern-ocaml/"
tags: ["git" "diff"]
depends: [
  "ocaml"
  "dune" {>= "2.5"}
  "ocamlformat" {= "0.14.1" & dev}
  "ocaml-lsp-server" {dev}
]
pin-depends: [
  [ "ocaml-lsp-server.dev"
    "git+https://github.com/ocaml/ocaml-lsp.git#HEAD" ]
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "-j" jobs] {with-doc}
]
name: "modern-ocaml"
synopsis: "Template for a modern ocaml project"
description: "Complete configuration of an ocaml project
- package manager
- CI
- build system
- code formatting
- editor setup
"
